# zadanie

./: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/gui/: CMakeLists.txt
libraries/gui/inc/: gui.h  gui_graph.h  gui_main_window.h
libraries/gui/src/: gui.cpp  gui_graph.cpp  gui_main_window.cpp
libraries/point_group/: CMakeLists.txt
libraries/point_group/inc/: group.h  point.h
libraries/point_group/src/: group.cpp  point.cpp
tests/: CMakeLists.txt  test1.cpp
